[package]
name = "beancount-core"
description = "Data representation for Beancount, a text-based double-entry bookkeeping system."
version = "0.2.0"
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>", "Michael Budde <git@mbudde.dk>"]
repository = "https://github.com/twilco/beancount/tree/master/beancount-core"
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "twilco/beancount", branch = "master" }

[dependencies]
typed-builder = "0.7"
bigdecimal = "0.4"
chrono = { version = "0.4", optional = true }
